--- a/lab6/lab6.html
+++ b/lab6/lab6.html
@@ -5,7 +5,7 @@
    <title>Chapter 9 - Share Your Travels</title>
 
    <link rel="stylesheet" href="lab6.css" />
-   <script type="text/javascript" src="lab6.js"></script>   
+   <script type="text/javascript" src="lab6.js" defer></script>
 </head>
 <body>
 <header>
@@ -26,5 +26,6 @@
     </div>
 
 </main>
+
 </body>
 </html>
