--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -305,103 +305,83 @@
 
 
 
-<footer class = "footer">
-    <div class = "container">
-        <div class= "row">
-              <div class = "col-md-3">
-                  <h4> <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>  About Us</h4>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+     <footer>
+        <div class="container">
+           <div class="row">
+              <div class="col-md-3">
+                 <h4><span class="glyphicon glyphicon-info-sign"></span> About Us</h4>
+                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+              </div>
+              <div class="col-md-3">
+                 <h4><span class="glyphicon glyphicon-earphone"></span> Customer Service</h4>
+                 <ul class="nav nav-stacked">
+                   <li><a href="#">Delivery Information</a></li>
+                   <li><a href="#">Privacy Policy</a></li>
+                   <li><a href="#">Shipping</a></li>
+                   <li><a href="#">Terms and Conditions</a></li>
+                 </ul>
+              </div>
+              <div class="col-md-3">
+                 <h4><span class="glyphicon glyphicon-shopping-cart"></span> Just Ordered</h4>
+                 <div class="media">
+                   <a class="pull-left" href="#">
+                     <img class="media-object" src="images/art/tiny/099110.jpg" alt="...">
+                   </a>
+                   <div class="media-body">
+                     <p class="media-heading similarTitle"><a href="#">The Veiled Woman</a></p>
+                     <em>5 minutes ago</em>
+                   </div>
+                 </div>
+                 <div class="media">
+                   <a class="pull-left" href="#">
+                     <img class="media-object" src="images/art/tiny/116010.jpg" alt="...">
+                   </a>
+                   <div class="media-body">
+                     <p class="media-heading similarTitle"><a href="#">Artist Holding a Thistle</a></p>
+                     <em>11 minutes ago</em>
+                   </div>
+                 </div>
+                 <div class="media">
+                   <a class="pull-left" href="#">
+                     <img class="media-object" src="images/art/tiny/113010.jpg" alt="...">
+                   </a>
+                   <div class="media-body">
+                     <p class="media-heading similarTitle"><a href="#">Self-portrait in a Straw Hat</a></p>
+                     <em>23 minutes ago</em>
+                   </div>
+                 </div>
+              </div>
+              <div class="col-md-3">
+                 <h4><span class="glyphicon glyphicon-envelope"></span> Contact us</h4>
+                 <form role="form">
+                   <div class="form-group tight-form-group">
+                     <label class="sr-only" for="name">Name</label>
+                     <input type="text" class="form-control" name="email" placeholder="Enter name ...">
+                   </div>
+                   <div class="form-group tight-form-group">
+                     <label class="sr-only" for="email">Email</label>
+                     <input type="email" class="form-control" name="email" placeholder="Enter email ...">
+                   </div>
+                   <div class="form-group tight-form-group">
+                     <label class="sr-only" for="email">Email</label>
+                     <textarea class="form-control" rows="3" placeholder="Enter message ..."></textarea>
+                   </div>
+                   <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                 </form>
               </div>
 
-              <div class = "col-md-3">
-                  <h4> <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>  Customer Service</h4>
-                  <ul class = "">
-                    <li><a href="#">Delivery Information</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Shipping</a></li>
-                    <li><a href="#">Terms and Conditions</a></li>
-                  </ul>
+           </div>
+        </div>
+
+        <div id="copyrightRow">
+           <div class="container">
+              <div class="row">
+                <p class="text-muted">All images are copyright to their owners. This is just a hypothetical site
+                <span class="pull-right">&copy; 2014 Copyright Art Store</span></p>
               </div>
-
-              <div class = "col-md-3">
-                  <h4><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Just Ordered</h4>
-
-                  <div class="media">
-                      <div class="media-left">
-                        <a href="#">
-                          <img class="media-object" src="images/art/tiny/13030.jpg" alt="...">
-                        </a>
-                      </div>
-                      <div class="media-body">
-
-                        <p> <a href="#">Arrangement in Grey and Black</a></p>
-                        <em>5 minutes ago</em>
-                      </div>
-                  </div>
-
-                  <div class="media">
-                      <div class="media-left">
-                        <a href="#">
-                          <img class="media-object" src="images/art/tiny/116010.jpg" alt="...">
-                        </a>
-                      </div>
-                      <div class="media-body">
-
-                        <p> <a href="#">Artist Holding a Thistle</a></p>
-                        <em>11 minutes ago</em>
-                      </div>
-                  </div>
-
-                  <div class="media">
-                      <div class="media-left">
-                        <a href="#">
-                          <img class="media-object" src="images/art/tiny/113010.jpg" alt="...">
-                        </a>
-                      </div>
-                      <div class="media-body">
-
-                        <p> <a href="#">Self-portrait in a Straw Hat</a></p>
-                        <em>23 minutes ago</em>
-                      </div>
-                  </div>
-
-            </div>
-
-
-             <div class = "col-md-3">
-                      <h4><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact us</h4>
-                      <form class="form-horizontal">
-                              <div class="form-group col-md-12">
-                                    <div class="">
-                                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                                    </div>
-                              </div>
-                              <div class="form-group col-md-12">
-                                    <div class="">
-                                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                                    </div>
-                              </div>
-                              <div class = "form-group col-md-12">
-                                  <textarea class="form-control" rows="3" placeholder="Enter message"></textarea>
-                              </div>
-                              <div class="form-group col-md-12">
-                                <div class=" ">
-                                  <button type="submit" class="btn btn-primary btn-block" rows = "3">Submit</button>
-                                </div>
-                              </div>
-                    </form>
-
-            </div>
+           </div>
         </div>
-    </div>
-
-    <div class = container>
-        <div class = "row" id="copyrightRow">
-            <p style = "color : darkgrey">All images are copyright to their owners. This is just a hypothetical site
-            <span class = "pull-right" >&copy; 2014 Copyright Art Store</span></p>
-        </div>
-    </div>
-</footer>
+ </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
